# chessboard

./: CMakeLists.txt  README.md
include/: board.h  interface.h  rules.h
src/: board.cpp  chessgame  chessgame.cpp  interface  interface.cpp  rules.cpp
test/: CMakeLists.txt
